--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,53 +13,57 @@
     <!-- fuentes -->
     <!-- javascript -->
 </head>
+
 <body>
-<div class="row">
-    <div class="column-1">
-        <p>1</p>
+    <div class="row section-1">
+        <div class="column-3">
+            <p>1</p>
+        </div>
+        <div class="column-3">
+            <p>2</p>
+        </div>
+        <div class="column-3">
+            <p>3</p>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="column-2">
-        <p>2</p>
+    <div class="row section-1">
+        <div class="column-4">
+            <p>4</p>
+        </div>
+        <div class="column-4">
+            <p>5</p>
+        </div>
+        <div class="column-4">
+            <p>6</p>
+        </div>
+        <div class="column-4">
+            <p>7</p>
+        </div>
     </div>
-    <div class="column-2">
-        <p>3</p>
+    <div class="row section-1">
+        <div class="column-2">
+            <p>8</p>
+        </div>
+        <div class="column-2">
+            <p>9</p>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="column-4">
-        <p>4</p>
     </div>
-    <div class="column-4">
-        <p>5</p>
+    <div class="row section-1">
+        <div class="column-4">
+            <p>10</p>
+        </div>
+        <div class="column-4">
+            <p>11</p>
+        </div>
+        <div class="column-4">
+            <p>12</p>
+        </div>
+        <div class="column-4">
+            <p>13</p>
+        </div>
     </div>
-    <div class="column-4">
-        <p>6</p>
-    </div>
-    <div class="column-4">
-        <p>7</p>
-    </div>
-</div>
-<div class="row">
-    <div class="column-2">
-        <p>8</p>
-    </div>
-    <div class="column-2">
-        <p>9</p>
-    </div>
-</div>
-<div class="row">
-    <div class="column-3">
-        <p>10</p>
-    </div>
-    <div class="column-3">
-        <p>11</p>
-    </div>
-    <div class="column-3">
-        <p>12</p>
-    </div>
-</div>
 
 </body>
+
 </html>
